--- a/src/app/demo/components/pages/events-udi/events-udi.component.html
+++ b/src/app/demo/components/pages/events-udi/events-udi.component.html
@@ -36,9 +36,10 @@
           <input id="title" type="text" pInputText formControlName="title" />
           <label for="title">Título</label>
         </p-floatLabel>
-        <div class="col-4 d-flex">
-          <p class="auto">Elija el color del evento</p>
-          <p-colorPicker class="m-auto" formControlName="color" />
+        <div class="col-4 d-flex m-auto">
+          <p-colorPicker formControlName="color" />
+          <p class="m-auto">Elija el color del evento</p>
+          
         </div>
       </div>
       <div class="grid p-fluid field mt-4">
@@ -76,6 +77,7 @@
 
         <p-button label="Registrar" iconPos="right"
           icon="pi pi-check"
+          [disabled]="eventForm.invalid"
           (click)="addEvent()" />
 
       </div>
@@ -111,8 +113,4 @@
   [style]="{ width: '100rem', height: '100rem' }"
   [(visible)]="showEventDetailDoalog" [modal]="true" [closable]="true"
   [maximizable]="true">
-  <full-calendar
-    class="mt-4"
-    #calendarDetail
-    [options]="calendarOptionsDetail"></full-calendar>
 </p-dialog>
