--- a/src/app/demo/components/pages/events-udi/events-udi.component.html
+++ b/src/app/demo/components/pages/events-udi/events-udi.component.html
@@ -1,31 +1,34 @@
-<div class="grid">
-  <div class="col-12">
-    <p-card>
-      <p-toolbar class="mt-3">
-        <div class="p-toolbar-group-left">
-          <button type="button" pButton icon="pi pi-plus" label="Añadir Evento"
-            (click)="displayDialog=true"></button>
-        </div>
-
-        <div class="p-toolbar-group-right">
-          <p style="margin: 0 1rem 0 0;">Ver en intervalos de</p>
-          <form [formGroup]="slotDurationForm">
-
-            <p-dropdown
-              formControlName="slotDuration"
-              [options]="timeslots"
-              optionLabel="name" />
-          </form>
-        </div>
-      </p-toolbar>
-      <full-calendar
-        class="mt-4"
-        #calendar
-        [options]="calendarOptions"
-        [events]="events"></full-calendar>
-    </p-card>
+<div *ngIf="!showEventDetailDoalog">
+  <div class="grid">
+    <div class="col-12">
+      <p-card>
+        <p-toolbar class="mt-3">
+          <div class="p-toolbar-group-left">
+            <button type="button" pButton icon="pi pi-plus" label="Añadir Evento"
+              (click)="displayDialog=true"></button>
+          </div>
+  
+          <div class="p-toolbar-group-right">
+            <p style="margin: 0 1rem 0 0;">Ver en intervalos de</p>
+            <form [formGroup]="slotDurationForm">
+  
+              <p-dropdown
+                formControlName="slotDuration"
+                [options]="timeslots"
+                optionLabel="name" />
+            </form>
+          </div>
+        </p-toolbar>
+        <full-calendar
+          class="mt-4"
+          #calendar
+          [options]="calendarOptions"
+          [events]="events"></full-calendar>
+      </p-card>
+    </div>
   </div>
 </div>
+
 
 <p-dialog header="Añadir Evento" [style]="{ width: '60rem' }"
   [(visible)]="displayDialog" [modal]="true" [closable]="false">
@@ -109,8 +112,142 @@
   </form> -->
 </p-dialog>
 
-<p-dialog header="Detalle del Evento"
-  [style]="{ width: '100rem', height: '100rem' }"
-  [(visible)]="showEventDetailDoalog" [modal]="true" [closable]="true"
-  [maximizable]="true">
-</p-dialog>
+<div *ngIf="showEventDetailDoalog" class="grid">
+  <div class="col-12">
+
+      <div class="card">
+          <div class="grid d-flex col-12">
+              <div class="mr-auto p-2">
+                  <p-button (click)="backCalendar()" label="Regresar"
+                      [outlined]="true"
+                      icon="pi pi-angle-left" iconPos="left" />
+                  <p-button *ngIf="!showEdit && inscriptionState !== 'Cancelado' && inscriptionState !== 'Aprobado'" class="ml-3"
+                      (click)="showEdition()"
+                      label="Editar"
+                      icon="pi pi-pencil" iconPos="left" />
+                  <p-button *ngIf="showEdit && inscriptionState !== 'Cancelado' && inscriptionState !== 'Aprobado'" class="ml-3"
+                      (click)="cancelEdition()"
+                      label="Cancelar edición"
+                      icon="pi pi-times" iconPos="right" />
+                  <p-button *ngIf="showEdit && inscriptionState !== 'Cancelado' && inscriptionState !== 'Aprobado'" class="ml-3"
+                      (click)="saveEdition()"
+                      label="Guardar cambios"
+                      icon="pi pi-save" iconPos="left" />
+              </div>
+              <div class="p-2">
+                  <p-button
+                      *ngIf="inscriptionState !== 'Cancelado' && inscriptionState !== 'Aprobado'"
+                      label="Cancelar inscripción"
+                      [outlined]="true"
+                      class="mr-3"
+                      icon="pi pi-times" iconPos="left"
+                      severity="danger" (click)="goToCancelation()" />
+                  <p-button
+                      *ngIf="inscriptionState === 'Inscrito' || inscriptionState === 'Observado'"
+                      label="Pasar a revisión" [outlined]="true"
+                      icon="pi pi-angle-right" iconPos="right"
+                      severity="info" (click)="goToReview()" />
+                  <p-button *ngIf="inscriptionState === 'En revisión'"
+                      label="Observado" [outlined]="true"
+                      icon="pi pi-exclamation-circle" iconPos="left"
+                      severity="warning" (click)="goToObserved()" />
+                  <p-button
+                      *ngIf="inscriptionState === 'En revisión'"
+                      class="ml-3"
+                      label="Aprobado" [outlined]="true"
+                      icon="pi pi-angle-right" iconPos="right"
+                      severity="success" (click)="goToApprove()" />
+              </div>
+          </div>
+          <div class="card flex justify-content-center col-12">
+
+              <h4
+                  class="font-bold">Título:
+                  {{eventSelected}}</h4>
+
+          </div>
+          <div *ngIf="!showEdit" class="grid col-12">
+              <div class="col-3"><p class="font-bold">Nro de
+                      expediente:</p><p>{{eventSelected}}</p></div>
+              <div class="col-3"><p class="font-bold">Escuala
+                      profesional:</p><p>{{eventSelected}}</p></div>
+              <div class="col-3"><p class="font-bold">Nro de
+                      oficio:</p><p>{{eventSelected}}</p></div>
+              <div class="col-3"><p class="font-bold">Nro de
+                      resolución:</p><p>{{eventSelected}}</p></div>
+          </div>
+          <div *ngIf="showEdit" class="grid col-12">
+              <div class="col-3"><p class="font-bold">Nro de
+                      expediente:</p><input type="text" pInputText
+                      class="full-width"
+                      [value]="eventSelected" />
+              </div>
+              <div class="col-3"><p class="font-bold">Escuala
+                      profesional:</p><input type="text" pInputText
+                      class="full-width"
+                      [value]="eventSelected.escuela_profesional" />
+              </div>
+              <div class="col-3"><p class="font-bold">Nro de
+                      oficio:</p><input type="text" pInputText
+                      class="full-width"
+                      [value]="eventSelected.numero_oficio" />
+              </div>
+              <div class="col-3"><p class="font-bold">Nro de
+                      resolución:</p><input type="text" pInputText
+                      class="full-width"
+                      [value]="eventSelected.numero_resolucion" />
+              </div>
+          </div>
+          <div class="ml-2 mr-2 separator"></div>
+          <div class="grid col-12">
+            <div class=" col-12">
+              <h5>Lista de participantes</h5>
+          </div>
+            <div class="w-full">
+              <ul class="m-0 p-0 list-none border-1 surface-border border-round p-3 flex flex-column gap-2 w-full">
+                  <li
+                      *ngFor="let user of users"
+                      [class]="[
+                          'p-2',
+                          'hover:surface-hover',
+                          'border-round',
+                          'border-1',
+                          'border-transparent',
+                          'transition-all',
+                          'transition-duration-200',
+                          'flex',
+                          'align-items-center',
+                          'justify-content-between',
+                          selectedUser?.id === user?.id ? 'border-primary' : ''
+                      ]"
+                      (contextmenu)="onContextMenu($event, user)">
+                      <div class="flex align-items-center gap-2">
+                        <i class="pi pi-user"></i>
+                          <span class="font-bold">
+                              {{ user.name }}
+                          </span>
+                      </div>
+                      <p-tag [value]="user.role" [severity]="getBadge(user)" />
+                  </li>
+              </ul>
+                    </div>
+          
+          </div>
+          <div class="ml-2 mr-2 separator"></div>
+          <div class="grid col-12">
+              <div class=" col-12">
+                  <h5>Lista de tareas</h5>
+              </div>
+  
+              <div class="ml-2 mr-2 separator"></div>
+
+              <div class=" col-12">
+                  <h5>Observaciones</h5>
+              </div>
+            
+      
+
+          </div>
+      </div>
+  </div>
+</div>
